# djnago_mvt-e-comerce

./: .gitignore  Dockerfile  pyproject.toml
accounts/: models.py  views.py
accounts/migrations/: 0005_alter_account_options.py  0006_alter_account_options_alter_userprofile_options_and_more.py
carts/: models.py  views.py
carts/migrations/: 0006_alter_cart_options.py  0007_alter_cart_options_alter_cartitem_options_and_more.py
category/: context_processor.py  models.py
category/migrations/: 0005_alter_category_options.py  0006_alter_category_options_alter_category_cat_image_and_more.py  0007_category_parent.py  0008_category_created_at_category_updated_at.py
docker-compose/: docker-compose.yml
mensline/: settings.py  urls.py  views.py
orders/: admin.py  models.py  urls.py  views.py
orders/migrations/: 0006_alter_payment_options.py  0007_telegramuser_remove_orderproduct_order_and_more.py
slider/: models.py
slider/migrations/: 0003_alter_slider_options_alter_slider_slider_css.py
static/css/: bootstrap.css
static/js/: phone-input.js
store/: admin.py  models.py  views.py
store/migrations/: 0010_alter_productgallery_options_and_more.py  0011_alter_product_product_image.py  0012_alter_product_product_name_alter_product_slug.py  0013_alter_product_options_alter_productgallery_options_and_more.py  0014_product_color_product_fabric_composition_and_more.py  0015_alter_product_product_name.py  0016_alter_product_slug.py  0017_product_sizes.py  0018_product_additional_images.py
templates/: base.html  home.html
templates/includes/: footer.html  (+1 more)
(+11 files in other folders)
