[tool.poetry]
name = "mens-line-store"
version = "0.1.0"
description = ""
authors = ["0leksandrr <tsybulskyy.sasha@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
python-decouple = "^3.8"
pillow = "^11.0.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
jinja2 = "^3.1.4"
django-storages = "^1.14.4"
django-admin-thumbnails = "^0.2.9"
django-session-timeout = "^0.1.0"
whitenoise = "^6.8.2"
django-import-export = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
